@@ -25,7 +25,7 @@ module BoxGrinder
     def after_init
       register_deliverable(:disk => "#{@appliance_config.name}.ec2")
 
-      register_supported_os('fedora', ['13', '14'])
+      register_supported_os('fedora', ['13', '14', '15'])
       register_supported_os('centos', ['5'])
       register_supported_os('rhel', ['5', '6'])
     end
